crates/ir/tests/snapshots/lower_test__ownership__own_fn_runtime_returned.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__own_fn_runtime_returned

declare println: (Dict, m) -> Unit

fn make_fn(v0: ~String) -> ~() -> String =
  let v2: ~() -> ~String = make_closure(lambda$49, [v0])
  v2

fn main() -> Unit =
  let v3: ~() -> String = call make_fn("hello")
  let v4: String = call_closure v3()
  let v5: Dict = get_dict Show[String]
  let v6: Unit = call println(v5, v4)
  v6

fn lambda$49(v1: ~String) -> ~String =
  v1
